apps/joke/Service.yaml
apiVersion: v1
kind: Service
metadata:
  name: joke
spec:
  type: ClusterIP
  selector:
    app: joke
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
