apps/joke/Ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: joke
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  ingressClassName: external-nginx
  tls:
    - hosts:
        - elverdaderorey.nahue.ar
      secretName: joke
  rules:
    - host: elverdaderorey.nahue.ar
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: joke
                port:
                  number: 80
